# afri-dollar

./: .gitattributes  .prettierignore  README.md  package-lock.json  package.json
.husky/: pre-push
apps/backend/: .env.example  .eslintrc.js  README.md  package.json  tsconfig.json
apps/backend/src/: index.ts
apps/backend/src/config/: jobs.config.ts  logger.ts  redis.ts  swagger.ts
apps/backend/src/controllers/: admin.controller.ts  audit.controller.ts  auth.controller.ts  fx.controller.ts  job.controller.ts  payment.controller.ts  payroll.controller.ts  report.controller.ts  security.controller.ts  treasury.controller.ts  webhook.controller.ts
apps/backend/src/middleware/: audit.middleware.ts  auth.middleware.ts  rate-limit.middleware.ts  security.middleware.ts
apps/backend/src/routes/: admin.routes.ts  audit.routes.ts  auth.routes.ts  fx.routes.ts  job.routes.ts  payment.routes.ts  payroll.routes.ts  report.routes.ts  security.routes.ts  stellar.routes.ts  treasury.routes.ts  wallet.routes.ts  webhook.routes.ts
apps/backend/src/services/: admin.service.ts  audit.service.ts  auth.service.ts  fx.service.ts  job-queue.service.ts  notification.service.ts  payment.service.ts  payroll.service.ts  report-worker.service.ts  report.helpers.ts  report.service.ts  wallet.service.ts  (+6 more)
apps/contracts/contracts/bridge/: Cargo.toml  README.md
apps/contracts/contracts/bridge/src/: lib.rs  test.rs
apps/contracts/contracts/fx-swap/: Cargo.toml
apps/contracts/contracts/fx-swap/src/: lib.rs  test.rs
apps/contracts/contracts/token/: Cargo.toml
apps/contracts/contracts/token/src/: lib.rs  test.rs
apps/frontend/components/: README.md
apps/frontend/tests/: components.test.tsx
(+69 files in other folders)
