[package]
name = "afri-contract-bridge"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Cross-chain bridge contract for AfriDollar asset transfers"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { workspace = true }
afri-contract-shared = { path = "../../crates/shared" }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }